--- a/man1/index.html
+++ b/man1/index.html
@@ -28,46 +28,94 @@
             <ul class="sub-menu">
                 <h4>Модельный ряд</h4>
                 <li>Техника в наличии</li>
-                <li class="sub-menu3"><a href="#">Магистральные перевозки</a>
-                    <ul class="sub-menu1">
+                <li id="menu-1" class="sub-menu3"><a href="#">Магистральные перевозки</a>
+                    <ul id="menu-11" class="sub-menu1">
                         <h4>Магистральные перевозки</h4>
-                        <li class="menu-sub"><a href="#">TGX</a></li>
-                        <li class="menu-sub"><a href="#">TGS</a></li>
-                        <li class="menu-sub"><a href="#">Концепция автопоездов</a></li>
+                        <li id="menu-5" class="menu-sub sub-menu3"><a href="#">TGX</a>
+                            <ul id="menu-51" class="sub-menu-3">
+                                    <h4>TGX</h4>
+                                    <li class="menu-sub"><a href="#">Обзор</a></li>
+                                    <li class="menu-sub"><a href="#">Сервис</a></li>
+                                    <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                    <li class="menu-sub"><a href="#">Финансирование</a></li>
+                            </ul>
+                        </li>
+                        <li id="menu-6" class="menu-sub sub-menu3"><a href="#">TGS</a>
+                            <ul id="menu-61" class="sub-menu-3 sub-menu-31">
+                                    <h4>TGS</h4>
+                                    <li class="menu-sub"><a href="#">Обзор</a></li>
+                                    <li class="menu-sub"><a href="#">Сервис</a></li>
+                                    <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                    <li class="menu-sub"><a href="#">Финансирование</a></li>
+                            </ul></li>
                         <li class="menu-sub"><a href="#">Сравнение моделей</a></li>
                         <li class="menu-sub"><a href="#">Рейтинг TUV</a></li>
                     </ul></li>
-                    <li class="sub-menu3"><a href="#">Строительство</a>
-                    <ul class="sub-menu1 sub-stroy">
+                    <li id="menu-2" class="sub-menu3"><a href="#">Строительство</a>
+                    <ul id="menu-21" class="sub-menu1 sub-stroy">
                     <h4>Строительство</h4>
-                    <li class="menu-sub"><a href="#">TGX</a>
-                        <!-- <ul class="sub-menu4 sub-bus">
-                            <h4>TGX</h4>
-                            <li><a href="#">Обзор</a></li>
-                            <li><a href="#">Сервис</a></li>
-                            <li><a href="#">Технические разработки</a></li>
-                            <li><a href="#">Финансирование</a></li>
-                        </ul></li> -->
-                    <li class="menu-sub"><a href="#">TGS</a></li>
-                    <li class="menu-sub"><a href="#">TGM</a></li>
-                    <li class="menu-sub"><a href="#">TGL</a></li>
-                    <li class="menu-sub"><a href="#">TGS WW</a></li>
-                </ul></li>
-                <li class="sub-menu3"><a href="#">Разовые перевозки</a>
-                    <ul class="sub-menu1 sub-perevoz">
+                    <li id="menu-7" class="menu-sub sub-menu3"><a href="#">TGX</a>
+                        <ul id="menu-71" class="sub-menu-3">
+                                <h4>TGX</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Тяжеловесы</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                    </li>
+                    <li id="menu-8" class="menu-sub sub-menu3"><a href="#">TGS</a>
+                        <ul id="menu-81" class="sub-menu-3">
+                                <h4>TGS</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                    </li>
+                    <li id="menu-9" class="menu-sub sub-menu3"><a href="#">TGM</a>
+                        <ul id="menu-91" class="sub-menu-3">
+                                <h4>TGM</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                    </li>
+                    <li id="menu-10" class="menu-sub sub-menu3"><a href="#">TGL</a>
+                        <ul id="menu-101" class="sub-menu-3">
+                                <h4>TGL</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                    </li>
+                    <li id="menu-11" class="menu-sub sub-menu3"><a href="#">TGS WW</a>
+                        <ul id="menu-111" class="sub-menu-3">
+                                <h4>TGS WW</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <li id="menu-3" class="sub-menu3"><a href="#">Разовые перевозки</a>
+                    <ul  id="menu-31" class="sub-menu1 sub-perevoz">
                         <h4>Разовые перевозки</h4>
-                        <li class="menu-sub"><a href="#">TGS</a></li>
-                        <li class="menu-sub"><a href="#">TGM</a></li>
-                        <li class="menu-sub"><a href="#">TGL</a></li>
+                        <li class="menu-sub sub-menu3"><a href="#">TGS</a></li>
+                        <li class="menu-sub sub-menu3"><a href="#">TGM</a></li>
+                        <li class="menu-sub sub-menu3"><a href="#">TGL</a></li>
                         <li class="menu-sub"><a href="#">Лесовозные</a></li>
                         <li class="menu-sub"><a href="#">Коммунальная техника MAN</a></li>
                         </ul></li>
-                <li class="sub-menu3"><a href="#">Технологии и разработки</a>
-                    <ul class="sub-menu1 sub-technology">
+                <li id="menu-4" class="sub-menu3"><a href="#">Технологии и разработки</a>
+                    <ul id="menu-41" class="sub-menu1 sub-technology">
                     <h4>Технологии и разработки</h4>
-                    <li class="menu-sub"><a href="#">Системы безопасности и помощи водителю</a></li>
-                    <li class="menu-sub"><a href="#">Системы повышения эффективности</a></li>
-                    <li class="menu-sub"><a href="#">Кабины</a></li>
+                    <li class="menu-sub sub-menu3"><a href="#">Системы безопасности и помощи водителю</a></li>
+                    <li class="menu-sub sub-menu3"><a href="#">Системы повышения эффективности</a></li>
+                    <li class="menu-sub sub-menu3"><a href="#">Кабины</a></li>
                     </ul></li>
             </ul>
         </div>
@@ -156,6 +204,30 @@
         var search = document.querySelector('#search');
         search.classList.toggle("show");
      }
+     $('#menu-1').click(function() {
+			var menu = $('#menu-11');
+			$(menu).toggle();
+        });
+    $('#menu-2').click(function() {
+		var menu = $('#menu-21');
+		$(menu).toggle();
+        });
+    $('#menu-3').click(function() {
+		var menu = $('#menu-31');
+		$(menu).toggle();
+        });
+    $('#menu-4').click(function() {
+		var menu = $('#menu-41');
+		$(menu).toggle();
+        });
+    $('#menu-5').click(function() {
+		var menu = $('#menu-51');
+		$(menu).toggle();
+        });
+    $('#menu-6').click(function() {
+		var menu = $('#menu-61');
+		$(menu).toggle();
+		});
                 </script>
 
            
