--- a/man1/index.html
+++ b/man1/index.html
@@ -23,16 +23,16 @@
             <li><a href="#">Главная</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Специальные предложения</a></li>
-            <li><a href="#">Модельный ряд</a>
-                <div class="sub-menu-container">
+            <li id="menu-1"><a href="#">Модельный ряд</a>
+                <div id="menu-11"class="sub-menu-container">
             <ul class="sub-menu">
                 <h4>Модельный ряд</h4>
                 <li>Техника в наличии</li>
-                <li id="menu-1" class="sub-menu3"><a href="#">Магистральные перевозки</a>
-                    <ul id="menu-11" class="sub-menu1">
+                <li class="sub-menu3"><a href="#">Магистральные перевозки</a>
+                    <ul class="sub-menu1">
                         <h4>Магистральные перевозки</h4>
-                        <li id="menu-5" class="menu-sub sub-menu3"><a href="#">TGX</a>
-                            <ul id="menu-51" class="sub-menu-3">
+                        <li class="menu-sub sub-menu3"><a href="#">TGX</a>
+                            <ul class="sub-menu-3">
                                     <h4>TGX</h4>
                                     <li class="menu-sub"><a href="#">Обзор</a></li>
                                     <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -40,8 +40,8 @@
                                     <li class="menu-sub"><a href="#">Финансирование</a></li>
                             </ul>
                         </li>
-                        <li id="menu-6" class="menu-sub sub-menu3"><a href="#">TGS</a>
-                            <ul id="menu-61" class="sub-menu-3 sub-menu-31">
+                        <li class="menu-sub sub-menu3"><a href="#">TGS</a>
+                            <ul class="sub-menu-3 sub-menu-31">
                                     <h4>TGS</h4>
                                     <li class="menu-sub"><a href="#">Обзор</a></li>
                                     <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -51,11 +51,11 @@
                         <li class="menu-sub"><a href="#">Сравнение моделей</a></li>
                         <li class="menu-sub"><a href="#">Рейтинг TUV</a></li>
                     </ul></li>
-                    <li id="menu-2" class="sub-menu3"><a href="#">Строительство</a>
-                    <ul id="menu-21" class="sub-menu1 sub-stroy">
+                    <li class="sub-menu3"><a href="#">Строительство</a>
+                    <ul class="sub-menu1 sub-stroy">
                     <h4>Строительство</h4>
-                    <li id="menu-7" class="menu-sub sub-menu3"><a href="#">TGX</a>
-                        <ul id="menu-71" class="sub-menu-3">
+                    <li class="menu-sub sub-menu3"><a href="#">TGX</a>
+                        <ul class="sub-menu-3">
                                 <h4>TGX</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -64,8 +64,8 @@
                                 <li class="menu-sub"><a href="#">Финансирование</a></li>
                         </ul>
                     </li>
-                    <li id="menu-8" class="menu-sub sub-menu3"><a href="#">TGS</a>
-                        <ul id="menu-81" class="sub-menu-3">
+                    <li class="menu-sub sub-menu3"><a href="#">TGS</a>
+                        <ul class="sub-menu-3">
                                 <h4>TGS</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -73,8 +73,8 @@
                                 <li class="menu-sub"><a href="#">Финансирование</a></li>
                         </ul>
                     </li>
-                    <li id="menu-9" class="menu-sub sub-menu3"><a href="#">TGM</a>
-                        <ul id="menu-91" class="sub-menu-3">
+                    <li class="menu-sub sub-menu3"><a href="#">TGM</a>
+                        <ul class="sub-menu-3 sub-to-top1">
                                 <h4>TGM</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -82,8 +82,8 @@
                                 <li class="menu-sub"><a href="#">Финансирование</a></li>
                         </ul>
                     </li>
-                    <li id="menu-10" class="menu-sub sub-menu3"><a href="#">TGL</a>
-                        <ul id="menu-101" class="sub-menu-3">
+                    <li class="menu-sub sub-menu3"><a href="#">TGL</a>
+                        <ul class="sub-menu-3 sub-to-top2">
                                 <h4>TGL</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -91,8 +91,8 @@
                                 <li class="menu-sub"><a href="#">Финансирование</a></li>
                         </ul>
                     </li>
-                    <li id="menu-11" class="menu-sub sub-menu3"><a href="#">TGS WW</a>
-                        <ul id="menu-111" class="sub-menu-3">
+                    <li class="menu-sub sub-menu3"><a href="#">TGS WW</a>
+                        <ul class="sub-menu-3 sub-to-top3">
                                 <h4>TGS WW</h4>
                                 <li class="menu-sub"><a href="#">Обзор</a></li>
                                 <li class="menu-sub"><a href="#">Сервис</a></li>
@@ -101,21 +101,76 @@
                         </ul>
                     </li>
                 </ul>
-                <li id="menu-3" class="sub-menu3"><a href="#">Разовые перевозки</a>
-                    <ul  id="menu-31" class="sub-menu1 sub-perevoz">
+                <li class="sub-menu3"><a href="#">Разовые перевозки</a>
+                    <ul class="sub-menu1 sub-perevoz">
                         <h4>Разовые перевозки</h4>
-                        <li class="menu-sub sub-menu3"><a href="#">TGS</a></li>
-                        <li class="menu-sub sub-menu3"><a href="#">TGM</a></li>
-                        <li class="menu-sub sub-menu3"><a href="#">TGL</a></li>
+                        <li class="menu-sub sub-menu3"><a href="#">TGS</a>
+                            <ul class="sub-menu-3 sub-to-top1">
+                                <h4>TGS</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                        </li>
+                        <li class="menu-sub sub-menu3"><a href="#">TGM</a>
+                            <ul class="sub-menu-3 sub-to-top1">
+                                <h4>TGM</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                        </li>
+                        <li class="menu-sub sub-menu3"><a href="#">TGL</a>
+                            <ul class="sub-menu-3 sub-to-top1">
+                                <h4>TGL</h4>
+                                <li class="menu-sub"><a href="#">Обзор</a></li>
+                                <li class="menu-sub"><a href="#">Сервис</a></li>
+                                <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                <li class="menu-sub"><a href="#">Финансирование</a></li>
+                        </ul>
+                        </li>
                         <li class="menu-sub"><a href="#">Лесовозные</a></li>
                         <li class="menu-sub"><a href="#">Коммунальная техника MAN</a></li>
                         </ul></li>
-                <li id="menu-4" class="sub-menu3"><a href="#">Технологии и разработки</a>
-                    <ul id="menu-41" class="sub-menu1 sub-technology">
+                <li class="sub-menu3"><a href="#">Технологии и разработки</a>
+                    <ul class="sub-menu1 sub-technology">
                     <h4>Технологии и разработки</h4>
-                    <li class="menu-sub sub-menu3"><a href="#">Системы безопасности и помощи водителю</a></li>
-                    <li class="menu-sub sub-menu3"><a href="#">Системы повышения эффективности</a></li>
-                    <li class="menu-sub sub-menu3"><a href="#">Кабины</a></li>
+                    <li class="menu-sub sub-menu3"><a href="#">Системы безопасности и помощи водителю</a>
+                        <ul class="sub-menu-3 sub-to-top1 sub-menu-4">
+                            <h4>Системы безопасности и помощи водителю</h4>
+                            <li class="menu-sub"><a href="#">MAN BrakeMatic®</a></li>
+                            <li class="menu-sub"><a href="#">Адаптивный круиз-контроль</a></li>
+                            <li class="menu-sub"><a href="#">Электронная система курсовой устойчивости</a></li>
+                            <li class="menu-sub"><a href="#">Система автоматического торможения</a></li>
+                            <li class="menu-sub"><a href="#">Многофункциональное рулевое колесо</a></li>
+                            <li class="menu-sub"><a href="#">Continuous Damping Control</a></li>
+                            <li class="menu-sub"><a href="#">Система слежения за дорожной разметкой</a></li>
+                    </ul>
+                    </li>
+                    <li class="menu-sub sub-menu3"><a href="#">Системы повышения эффективности</a>
+                        <ul class="sub-menu-3 sub-to-top3 sub-menu-4">
+                            <h4>Системы повышения эффективности</h4>
+                            <li class="menu-sub"><a href="#">Темпомат с поддержкой GPS</a></li>
+                            <li class="menu-sub"><a href="#">MAN TipMatic®</a></li>
+                            <li class="menu-sub"><a href="#">MAN HydroDrive®</a></li>
+                    </ul>
+                    </li>
+                    <li class="menu-sub sub-menu3"><a href="#">Кабины</a>
+                        <ul class="sub-menu-3 sub-to-top3 sub-menu-4">
+                            <h4>Кабины</h4>
+                            <li class="menu-sub"><a href="#">Обзор</a></li>
+                            <li class="menu-sub"><a href="#">Кабина XLX</a></li>
+                            <li class="menu-sub"><a href="#">Кабина LX</a></li>
+                            <li class="menu-sub"><a href="#">Кабина M</a></li>
+                            <li class="menu-sub"><a href="#">Кабина C</a></li>
+                            <li class="menu-sub"><a href="#">Кабина XXL</a></li>
+                            <li class="menu-sub"><a href="#">Кабина XL</a></li>
+                            <li class="menu-sub"><a href="#">Кабина L</a></li>
+                            <li class="menu-sub"><a href="#">Кабина с двумя рядами сидений</a></li>
+                    </ul>
+                    </li>
                     </ul></li>
             </ul>
         </div>
@@ -208,26 +263,7 @@
 			var menu = $('#menu-11');
 			$(menu).toggle();
         });
-    $('#menu-2').click(function() {
-		var menu = $('#menu-21');
-		$(menu).toggle();
-        });
-    $('#menu-3').click(function() {
-		var menu = $('#menu-31');
-		$(menu).toggle();
-        });
-    $('#menu-4').click(function() {
-		var menu = $('#menu-41');
-		$(menu).toggle();
-        });
-    $('#menu-5').click(function() {
-		var menu = $('#menu-51');
-		$(menu).toggle();
-        });
-    $('#menu-6').click(function() {
-		var menu = $('#menu-61');
-		$(menu).toggle();
-		});
+
                 </script>
 
            
