--- a/man1/index.html
+++ b/man1/index.html
@@ -150,7 +150,7 @@
                     </ul>
                     </li>
                     <li class="menu-sub sub-menu3"><a href="#">Системы повышения эффективности</a>
-                        <ul class="sub-menu-3 sub-to-top3 sub-menu-4">
+                        <ul class="sub-menu-3 sub-to-top2 sub-menu-4">
                             <h4>Системы повышения эффективности</h4>
                             <li class="menu-sub"><a href="#">Темпомат с поддержкой GPS</a></li>
                             <li class="menu-sub"><a href="#">MAN TipMatic®</a></li>
@@ -160,14 +160,22 @@
                     <li class="menu-sub sub-menu3"><a href="#">Кабины</a>
                         <ul class="sub-menu-3 sub-to-top3 sub-menu-4">
                             <h4>Кабины</h4>
-                            <li class="menu-sub"><a href="#">Обзор</a></li>
+                            <div class="flex">
+                            <li style="width: 150px !important;" class="menu-sub"><a href="#">Обзор</a></li>
                             <li class="menu-sub"><a href="#">Кабина XLX</a></li>
-                            <li class="menu-sub"><a href="#">Кабина LX</a></li>
+                            </div>
+                            <div class="flex">
+                            <li style="width: 150px !important;" class="menu-sub"><a href="#">Кабина LX</a></li>
                             <li class="menu-sub"><a href="#">Кабина M</a></li>
-                            <li class="menu-sub"><a href="#">Кабина C</a></li>
+                            </div>
+                            <div class="flex">
+                            <li style="width: 150px !important;" class="menu-sub"><a href="#">Кабина C</a></li>
                             <li class="menu-sub"><a href="#">Кабина XXL</a></li>
-                            <li class="menu-sub"><a href="#">Кабина XL</a></li>
+                            </div>
+                            <div class="flex">
+                            <li style="width: 150px !important;" class="menu-sub"><a href="#">Кабина XL</a></li>
                             <li class="menu-sub"><a href="#">Кабина L</a></li>
+                            </div>
                             <li class="menu-sub"><a href="#">Кабина с двумя рядами сидений</a></li>
                     </ul>
                     </li>
