--- a/man1/index.html
+++ b/man1/index.html
@@ -48,6 +48,14 @@
                                     <li class="menu-sub"><a href="#">Технические разработки</a></li>
                                     <li class="menu-sub"><a href="#">Финансирование</a></li>
                             </ul></li>
+                        <li class="menu-sub sub-menu3"><a href="#">MAN XLION</a>
+                            <ul class="sub-menu-3 sub-menu-31">
+                                    <h4>MAN XLION</h4>
+                                    <li class="menu-sub"><a href="#">Обзор</a></li>
+                                    <li class="menu-sub"><a href="#">Сервис</a></li>
+                                    <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                    <li class="menu-sub"><a href="#">Финансирование</a></li>
+                            </ul></li>
                         <li class="menu-sub"><a href="#">Сравнение моделей</a></li>
                         <li class="menu-sub"><a href="#">Рейтинг TUV</a></li>
                     </ul></li>
@@ -185,27 +193,55 @@
             </li>
             <li id="bus"><a href="#">Автобусы</a>
                 <div class="sub-menu-container bus-dropdown">
-                <ul class="sub-menu">
-                    <h4>Автобусы</h4>
-                            <li class="sub-menu3"><a href="#">Туристические – MAN Lion's Coach</a>
-                                <ul class="sub-menu1 sub-bus">
-                                    <h4>Туристические – MAN Lion's Coach</h4>
-                                    <li><a href="#">Обзор</a></li>
-                                    <li><a href="#">Технические разработки</a></li>
-                                    <li><a href="#">Салон</a></li>
-                                    <li><a href="#">Место водителя</a></li>
-                                    <li><a href="#">Пакет MAN EfficientLine</a></li>
+                    <ul class="sub-menu">
+                        <h4>Модельный ряд</h4>
+                        <li class="sub-menu3"><a href="#">Туристические</a>
+                            <ul class="sub-menu1">
+                                <h4>Туристические</h4>
+                                <li class="menu-sub sub-menu3"><a href="#">Neoplan</a>
+                                    <ul class="sub-menu-3">
+                                            <h4>Neoplan</h4>
+                                            <li class="menu-sub"><a href="#">Обзор</a></li>
+                                            <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                            <li class="menu-sub"><a href="#">Салон</a></li>
+                                            <li class="menu-sub"><a href="#">Место водителя</a></li>
+                                            <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
+                                    </ul>
+                                </li>
+                                <li class="menu-sub sub-menu3"><a href="#">MAN Lion's Coach</a>
+                                    <ul class="sub-menu-3 sub-menu-31">
+                                            <h4>MAN Lion's Coach</h4>
+                                            <li class="menu-sub"><a href="#">Обзор</a></li>
+                                            <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                            <li class="menu-sub"><a href="#">Салон</a></li>
+                                            <li class="menu-sub"><a href="#">Место водителя</a></li>
+                                            <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
                                     </ul></li>
-                            <li class="sub-menu3"><a href="#">Междугородние – MAN Lion's Intercity</a>
-                                <ul class="sub-menu1 bus-to-top">
-                                    <h4>Междугородние – MAN Lion's Intercity</h4>
-                                    <li><a href="#">Обзор</a></li>
-                                    <li><a href="#">Highlights</a></li>
-                                    <li><a href="#">Пассажирский салон</a></li>
-                                    <li><a href="#">Место водителя</a></li>
-                                    </ul></li>
-                        </ul>
-                    </div></li>
+                            </ul></li>
+                            <li class="sub-menu3"><a href="#">Междугородние</a>
+                            <ul class="sub-menu1 bus-to-top">
+                            <h4>Междугородние</h4>
+                            <li class="menu-sub sub-menu3"><a href="#">Neoplan</a>
+                                <ul class="sub-menu-3">
+                                        <h4>Neoplan</h4>
+                                        <li class="menu-sub"><a href="#">Обзор</a></li>
+                                        <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                        <li class="menu-sub"><a href="#">Салон</a></li>
+                                        <li class="menu-sub"><a href="#">Место водителя</a></li>
+                                        <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
+                                </ul>
+                            </li>
+                            <li class="menu-sub sub-menu3"><a href="#">Man Lion's Intercity</a>
+                                <ul class="sub-menu-3 bus-to-top">
+                                        <h4>Man Lion's Intercity</h4>
+                                        <li class="menu-sub"><a href="#">Обзор</a></li>
+                                        <li class="menu-sub"><a href="#">Технические разработки</a></li>
+                                        <li class="menu-sub"><a href="#">Салон</a></li>
+                                        <li class="menu-sub"><a href="#">Место водителя</a></li>
+                                        <li class="menu-sub"><a href="#">Пакет MAN EfficientLine</a></li>
+                                </ul>
+                            </li>
+                </div></li>
             <li id="service-dropdown"><a href="#">Сервис</a>
                 <div class="sub-menu-container service-dropdown">
                     <ul class="sub-menu">
@@ -281,6 +317,4 @@
         });
 
                 </script>
-
-           
 
